--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,28 @@
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navContainer {
+    border-bottom: solid 3px #ffd7d7;
+    max-height: 10vh;
 }
 
-.nav-container ul {
+.navBlock {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
+.navContainer img {
+    width: 100%;
+    height: 35vh;
+}
+
+.navContainer ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 5%;
     width: 20%;
+    list-style: none;
+}
+
+.logo {
 }
