--- a/frontend/src/components/Profil/Profil.module.css
+++ b/frontend/src/components/Profil/Profil.module.css
@@ -10,7 +10,7 @@
 }
 
 .profilUpdateContainer p {
-    color: #fd2d01;
+    color: #a02f18;
 }
 
 .updateContainer {
@@ -29,20 +29,15 @@
     align-items: center;
     width: 50%;
     background-color: #ffd7d7;
-    border-bottom-left-radius: 8%;
-    border-top-right-radius: 8%;
-    height: 42.5vh;
+    border-radius: 8px;
+    padding: 2%;
 }
 .pictureWrapper {
-    border-bottom-left-radius: 8%;
-    border-top-right-radius: 8%;
-    width: 50%;
-    height: 50%;
     text-align: center;
 }
 .pictureWrapper img {
-    height: 100%;
-    width: auto;
+    height: auto;
+    width: 50%;
     margin: auto;
 }
 .pictureContainer form {
@@ -72,11 +67,11 @@
     white-space: normal;
     font-weight: 700;
     text-align: center;
-    padding: 16px 14px 18px;
+    padding: 10px 7px 10px;
     color: #4e5166;
     box-shadow: inset 0 0 0 2px #5f5f66;
     background-color: transparent;
-    height: 48px;
+    height: 2%;
 }
 
 .formUploadPic button:hover {
@@ -85,11 +80,11 @@
 }
 
 .formUploadPic label.selected {
-    color: #fd2d01;
+    color: #a02f18;
 }
 
 .formUploadPic label.selected:hover {
-    color: #fd2d01;
+    color: #a02f18;
 }
 
 .inputFile {
@@ -117,11 +112,11 @@
     white-space: normal;
     font-weight: 700;
     text-align: center;
-    padding: 16px 14px 18px;
+    padding: 10px 7px 10px;
     color: #4e5166;
     box-shadow: inset 0 0 0 2px #4e5166;
     background-color: transparent;
-    height: 15px;
+    height: 2%;
 }
 .formUploadPic label:hover {
     color: #ffd7d7;
@@ -131,9 +126,8 @@
 .bioContainer {
     width: 50%;
     background-color: #ffd7d7;
-    border-bottom-right-radius: 8%;
-    border-top-left-radius: 8%;
-    height: 42.5vh;
+    border-radius: 8px;
+    padding: 2%;
 }
 
 .bioContainer h3 {
@@ -170,11 +164,11 @@
     white-space: normal;
     font-weight: 700;
     text-align: center;
-    padding: 16px 14px 18px;
+    padding: 10px 7px 10px;
     color: #4e5166;
     box-shadow: inset 0 0 0 2px #4e5166;
     background-color: transparent;
-    height: 15px;
+    height: 2%;
 }
 
 .bioButton:hover {
